--- a/index.html
+++ b/index.html
@@ -3,12 +3,157 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Primes</title>
 
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
-
+ 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
+ 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/common.css">
+	<link rel="stylesheet" href="css/ionicons.min.css">
+	<link rel="stylesheet" href="css/main.css">
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery-1.2.3.min.js"></script>
 </head>
 <body>
+
+<header>
+	<div class="container">
+		<div class="row menu">
+			<div class="col-md-6">
+				<h1>PRIMES</h1>
+			</div>
+			<div class="col-md-6">
+				<ul class="pull-right ">
+					<li><a href="#">menu 1</a></li>
+					<li><a href="#">menu 2</a></li>
+					<li><a href="#">menu 3</a></li>
+					<li><a href="#">menu 4</a></li>
+					<li><a href="#">menu 5</a></li>
+				</ul>
+			</div> 
+		</div> <!--  final de menu -->
+
+		<div class="row hero">
+			<h1>Launch your Busines with Primes</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident perferendis voluptates assumenda commodi, doloribus aspernatur dolor nobis voluptatum eaque, eveniet dignissimos consequatur nisi molestias repellat, aperiam similique, sit deserunt placeat?</p>
+			<button></button>
+		</div>	
+	</div>
+</header>
+
+<section class="servicios">
+	<div class="container">
+		<div class="row">
+			<ul></ul>
+			
+		</div>
+		
+	</div>
+</section>
+
+<section class="television">
+	<div class="container">
+		<div class="row">
+			<h1></h1>
+			<img src="" alt="">
+		</div>
+	</div>
+</section>
+
+<section class="caracteristicas">
+	<div class="container">
+		<div class="row">
+			<ul></ul>
+		</div>
+	</div>
+</section>
+
+<section class="portafolio">
+	<div class="container">
+		<div class="row titulo-port">
+			<h2></h2>
+			<p></p>
+			<p>
+				<a href=""></a>
+				<a href=""></a>
+				<a href=""></a>
+				<a href=""></a>
+				<a href=""></a>
+			</p>
+		</div>
+		<div class="row">
+			<ul></ul>
+			<button></button>
+		</div>
+	</div>
+</section>
+
+<section class="frase">
+	<div class="container">
+		<div class="row">
+			<p></p>
+		<button></button>
+		</div>
+	</div>
+</section>
+
+<section class="paquetes">
+	<div class="container">
+		<div class="row titulo-pack">
+			<h2></h2>
+			<p></p>
+		</div>
+		<div class="row">
+			<ul></ul>
+		</div>
+	</div>
+</section>
+
+<section class="diana">
+	<div class="container">
+		<div class="row">
+			<h2></h2>
+			<img src="" alt="">
+			<p></p>
+		</div>
+	</div>
+</section>
+
+<section class="contacto">
+	<div class="container">
+		<div class="row">
+			<h2></h2>
+			<p></p>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				
+			</div>
+			<div class="col-md-6">
+				
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="siguenos">
+	<div class="container">
+		<div class="row">
+			<h2></h2>
+			<p></p>
+			<!-- redes sociales  con iconos-->
+		</div>
+	</div>
+</section>
+
+<footer>
+	<div class="container">
+		<div class="row">
+			<p></p>
+		</div>
+	</div>
+</footer>
+
 </body>
 </html>
