--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Primes</title>
-
  	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
  	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -18,80 +17,19 @@
 </head>
 <body>
 
-<header>
-	<div class="container">
-		<div class="row menu">
-			<div class="col-md-6">
-				<h1>PRIMES</h1>
-			</div>
-			<div class="col-md-6">
-				<ul class="pull-right list-unstyled ">
-					<li><a href="#">menu 1</a></li>
-					<li><a href="#">menu 2</a></li>
-					<li><a href="#">menu 3</a></li>
-					<li><a href="#">menu 4</a></li>
-					<li><a href="#">menu 5</a></li>
-				</ul>
-			</div> 
-		</div> <!--  final de menu -->
 
-		<div class="row hero">
-			<h1>Launch your Busines with Primes</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident perferendis voluptates assumenda commodi, doloribus aspernatur dolor nobis voluptatum eaque, eveniet dignissimos consequatur nisi molestias repellat, aperiam similique, sit deserunt placeat?</p>
-			<button></button>
-		</div>	
-	</div>
-</header>
 
-<section class="servicios">
-	<div class="container">
-		<div class="row">
-			<ul></ul>
-			
-		</div>
-		
-	</div>
-</section>
 
-<section class="television">
-	<div class="container">
-		<div class="row">
-			<h1></h1>
-			<img src="" alt="">
-		</div>
-	</div>
-</section>
 
-<section class="caracteristicas">
-	<div class="container">
-		<div class="row">
-			<ul></ul>
-		</div>
-	</div>
-</section>
 
-<section class="portafolio">
-	<div class="container">
-		<div class="row titulo-port">
-			<h2></h2>
-			<p></p>
-			<p>
-				<a href=""></a>
-				<a href=""></a>
-				<a href=""></a>
-				<a href=""></a>
-				<a href=""></a>
-			</p>
-		</div>
-		<div class="row">
-			<ul></ul>
-			<button></button>
-		</div>
-	</div>
-</section>
 
-<section class="frase">
-	<div class="container">
+
+
+
+
+
+<section>
+	<div class="container frase">
 		<div class="row t-blanco centrado">
 			<p>Quisque aliquam odio eu magna sodales, vel interdum erat suscipit.
 			<br><br>Mauris ut porttitor tellus.</p>
@@ -103,8 +41,8 @@
 	</div>
 </section>
 
-<section class="paquetes f-gris-claro espacio">
-	<div class="container">
+<section>
+	<div class="container paquetes f-gris-claro espacio">
 		<div class="row titulo-pack centrado">
 			<h2>Chosse the package</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
@@ -114,40 +52,40 @@
 				<li class="f-blanco">
 					<h3 class="f-gris t-blanco ">Standar</h3>
 					<p class="f-gris-claro">From $45.99 per month</p>
-					<p>Vestibulum est magna
-					<br>Mauris Autor masca libero
-					<br>Present magna tortor
-					<br>Cras et fermetum massa.</p>
-					<a href="#">Purchase</a>
-					<div class="btn-group" role="group" aria-label="...">
-  						<button type="button" class="btn btn-default">Call To Action</button>
-					</div>
+					<p class="linea-inf">Vestibulum est magna</p>
+					<p class="linea-inf">Mauris Autor masca libero</p>
+					<p class="linea-inf">Present magna tortor</p>
+					<p class="linea-inf">Cras et fermetum massa.</p>
+					<br>
+					<a class="boton f-gris t-blanco" href="#">Purchase</a>
 				</li>
 				<li class="f-blanco">
 					<h3 class="f-celeste t-blanco">Premium</h3>
 					<p class="f-gris-claro">From $75.99 per month</p>
-					<p>Vestibulum est magna
-					<br>Mauris Autor masca libero
-					<br>Present magna tortor
-					<br>Cras et fermetum massa.</p>
-					<a href="#">Purchase</a>
+					<p class="linea-inf">Vestibulum est magna</p>
+					<p class="linea-inf">Mauris Autor masca libero</p>
+					<p class="linea-inf">Present magna tortor</p>
+					<p class="linea-inf">Cras et fermetum massa.</p>
+					<br>
+					<a class="boton f-gris t-blanco" href="#">Purchase</a>
 				</li>
 				<li class="f-blanco">
 					<h3 class="f-gris t-blanco">Ultimate</h3>
 					<p class="f-gris-claro">From $99.99 per month</p>
-					<p>Vestibulum est magna
-					<br>Mauris Autor masca libero
-					<br>Present magna tortor
-					<br>Cras et fermetum massa.</p>
-					<a href="#">Purchase</a>
+					<p class="linea-inf">Vestibulum est magna</p>
+					<p class="linea-inf">Mauris Autor masca libero</p>
+					<p class="linea-inf">Present magna tortor</p>
+					<p class="linea-inf">Cras et fermetum massa.</p>
+					<br>
+					<a class="boton f-gris t-blanco" href="#">Purchase</a>
 				</li>
 			</ul>
 		</div>
 	</div>
 </section>
 
-<section class="diana espacio">
-	<div class="container">
+<section>
+	<div class="diana espacio container">
 		<div class="row customer centrado">
 			<h2>What our customer have to say...</h2>
 			<img src="img/customer.jpg" alt="Customer">
@@ -159,52 +97,55 @@
 	</div>
 </section>
 
-<section class="contacto espacio">
-	<div class="capa">
-		<div class="container t-blanco opacidad">
-			<div class="row">
-				<h2>Contacto Us</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor.</p>
-			<div class="row">
-				<div class="col-sm-6">
-				<h3>Send Message</h3>
-					<form  action="index.html" method="get">
-						<p>
-							<input type="text" id="name"  name="nombre" placeholder="Nombre" size="30" required>
-						</p>
-					    <p>
-							<input type="email" id="mail" name="email" placeholder="Email" size="30" required>
-						</p>
-					
-					    <p>
-							<textarea name="mensaje" id="msg" placeholder="Mensaje" cols="30" rows="8" required></textarea>
-						</p>
-						<a class="f-celeste t-blanco" href="#">Submmit</a>
-				</form>
+<section>
+	<div class=" contacto container  ">
+		<div class="capa t-blanco espacio">
+			
+				<div class="row">
+					<h2 class="pl15">Contacto Us</h2>
+					<p class="pl15">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor.</p>
 				</div>
-				<div class="col-sm-6">
-					<h3>About Us</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<h3>Addres</h3>
-					<p><i class=""></i>13 Brant Street Buertlon, Ontaro, Canada</p>
-					<p><i class=""></i>Phone: 001-223-652-357</p>
+				<div class="row">
+					<div class="col-sm-6">
+					<h3>Send Message</h3>
+						<form  action="index.html" method="get">
+							<p>
+								<input class="transparente w-90 pbt3" type="text" id="name"  name="nombre" placeholder="Nombre" size="30" required>
+							</p>
+						    <p>
+								<input class="transparente w-90 pbt3" type="email" id="mail" name="email" placeholder="Email" size="30" required>
+							</p>
+						
+						    <p>
+								<textarea class="transparente w-90 pbt3" name="mensaje" id="msg" placeholder="Mensaje" cols="30" rows="5" required></textarea>
+							</p>
+							<a class="f-celeste t-blanco" href="#">Submmit</a>
+					</form>
+					</div>
+					<div class="col-sm-6">
+						<h3>About Us</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<h3>Addres</h3>
+						<p><i class="ion-ios-location"></i>  13 Brant Street Buertlon, Ontaro, Canada</p>
+						<p><i class="ion-ios-telephone"></i>  Phone: 001-223-652-357</p>
+					</div>
 				</div>
-			</div>
-	</div>
+			
+		</div>
 	</div>
 </section>
 
-<section class="siguenos espacio centrado">
-	<div class="container">
+<section>
+	<div class="siguenos container espacio centrado">
 		<div class="row">
 			<h2>Follow Us!</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			tempor incididunt ut labore et dolore magna aliqua. </p>
 			<!-- redes sociales  con iconos-->
 			<div class="redes">
 				<div class="enlinea"><i class="ion-social-facebook"></i></div>
@@ -217,8 +158,8 @@
 	</div>
 </section>
 
-<footer class="pie f-gris ">
-	<div class="container">
+<footer>
+	<div class=" pie f-gris container">
 		<div class="row t-blanco centrado">
 			<p>©Primes 2015 - laboratoria-la</p>
 		</div>
