--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 				<br><br>Mauris ut porttitor tellus.</p>
 				<br>
 				<br>
-		  		<a class="boton-trans t-blanco" href="#">Call To Action</a>
+		  		<div class="btn">Call To Action</div>
 			</div>
 		</div>
 	</div>
